force-app/main/default/objects/Budget_Item__c/Budget_Item__c.object-meta.xml
<CustomObject>
    <label>Budget Item</label>
    <nameField>
        <label>Budget Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>