force-app/main/default/objects/Budget_Item__c/fields/Amount_Allocated_for_Indirect_Cost__c.field-meta.xml
<CustomField>
    <fullName>Amount_Allocated_for_Indirect_Cost__c</fullName>
    <defaultValue>25000</defaultValue>
    <label>Amount Allocated for Indirect Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>