force-app/main/default/objects/Budget_Item__c/fields/Apply_Indirect_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>Apply_Indirect_Rate_Cap__c</fullName>
    <formula
  >OR(ISPICKVAL(Category__c,&apos;Sub Awards&apos;), ISPICKVAL(Category__c,&apos;Procurement Contracts&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Indirect Rate Cap</label>
    <type>Checkbox</type>
</CustomField>