force-app/main/default/objects/Budget_Item__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <formula
  >IF(Total_Approved_Amount__c == 0, Total_Approved_Salary__c + Total_Approved_Benefits__c, Total_Approved_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>