force-app/main/default/objects/Budget_Item__c/fields/Approved_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Approved_Benefits__c</fullName>
    <label>Approved Benefits</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>