force-app/main/default/objects/Budget_Item__c/fields/BBBS_Personnel_Item_Balance__c.field-meta.xml
<CustomField>
    <fullName>BBBS_Personnel_Item_Balance__c</fullName>
    <formula>Total_Item_Budget__c - BBBS_Total_Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BBBS Personnel Item Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>