force-app/main/default/objects/Budget_Item__c/fields/BBBS_Total_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>BBBS_Total_Approved_Amount__c</fullName>
    <formula
  >IF(Total_Approved_Salary__c != 0, Total_Approved_Salary__c + Total_Approved_Benefits__c, Total_Approved_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >IF(Total_Approved_Salary__c != 0, Total_Approved_Salary__c + Total_Approved_Benefits__c, Total_Approved_Amount__c)</inlineHelpText>
    <label>BBBS Total Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>