force-app/main/default/objects/Budget_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child Safety</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contract Specialists</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Fringe Benefits</fullName>
            </value>
            <value>
                <fullName>Other Costs</fullName>
            </value>
            <value>
                <fullName>Personnel</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Sub Awards</fullName>
            </value>
            <value>
                <fullName>Consultant Travel</fullName>
            </value>
            <value>
                <fullName>Indirect Costs</fullName>
            </value>
            <value>
                <fullName>Procurement Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>