force-app/main/default/objects/Budget_Item__c/fields/Dental_Premium__c.field-meta.xml
<CustomField>
    <fullName>Dental_Premium__c</fullName>
    <label>Dental Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>