force-app/main/default/objects/Budget_Item__c/fields/Factor_Type__c.field-meta.xml
<CustomField>
    <fullName>Factor_Type__c</fullName>
    <inlineHelpText>BBBSA only: 
if Factor Type = FTE, New Item Budget = New Rate * Estimated FTE (from Sub-Grant);
if Factor Type = TCS, New Item Budget = New Rate * Youth Served % (from Sub-Grant);
if Factor Type = Other, New Item Budget = New Rate * Other Factor %;</inlineHelpText>
    <label>Factor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTE</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>