force-app/main/default/objects/Budget_Item__c/fields/FICA__c.field-meta.xml
<CustomField>
    <fullName>FICA__c</fullName>
    <label>FICA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>