force-app/main/default/objects/Budget_Item__c/fields/Fringe_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Balance__c</fullName>
    <formula>Fringe_Benefits__c - Total_Approved_Benefits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fringe Benefits - Total Approved Benefits</inlineHelpText>
    <label>Fringe Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>