force-app/main/default/objects/Budget_Item__c/fields/Fringe_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Fringe_Benefits__c</fullName>
    <label>Fringe Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>