force-app/main/default/objects/Budget_Item__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Budget Items</relationshipLabel>
    <relationshipName>Budget_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>