force-app/main/default/objects/Budget_Item__c/fields/Has_Dental__c.field-meta.xml
<CustomField>
    <fullName>Has_Dental__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Dental</label>
    <type>Checkbox</type>
</CustomField>