force-app/main/default/objects/Budget_Item__c/fields/Has_FICA__c.field-meta.xml
<CustomField>
    <fullName>Has_FICA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has FICA</label>
    <type>Checkbox</type>
</CustomField>