force-app/main/default/objects/Budget_Item__c/fields/Has_Life__c.field-meta.xml
<CustomField>
    <fullName>Has_Life__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Life</label>
    <type>Checkbox</type>
</CustomField>