force-app/main/default/objects/Budget_Item__c/fields/Has_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Has_Long_Term__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Long Term</label>
    <type>Checkbox</type>
</CustomField>