force-app/main/default/objects/Budget_Item__c/fields/Has_Medical__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Medical</label>
    <type>Checkbox</type>
</CustomField>