force-app/main/default/objects/Budget_Item__c/fields/Has_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Notes</label>
    <type>Checkbox</type>
</CustomField>