force-app/main/default/objects/Budget_Item__c/fields/Has_Other_Percent__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Percent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Other Percent</label>
    <type>Checkbox</type>
</CustomField>