force-app/main/default/objects/Budget_Item__c/fields/Has_Other_Premium__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Other Premium</label>
    <type>Checkbox</type>
</CustomField>