force-app/main/default/objects/Budget_Item__c/fields/Has_Retirement__c.field-meta.xml
<CustomField>
    <fullName>Has_Retirement__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Retirement</label>
    <type>Checkbox</type>
</CustomField>