force-app/main/default/objects/Budget_Item__c/fields/Has_SUTA__c.field-meta.xml
<CustomField>
    <fullName>Has_SUTA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has SUTA</label>
    <type>Checkbox</type>
</CustomField>