force-app/main/default/objects/Budget_Item__c/fields/Has_Vision__c.field-meta.xml
<CustomField>
    <fullName>Has_Vision__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Vision</label>
    <type>Checkbox</type>
</CustomField>