force-app/main/default/objects/Budget_Item__c/fields/Has_Workers_Comp__c.field-meta.xml
<CustomField>
    <fullName>Has_Workers_Comp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Workers Comp</label>
    <type>Checkbox</type>
</CustomField>