force-app/main/default/objects/Budget_Item__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description
  >If employee is salaried, hourly rate is calculated as follows: Salary divided by 2,080 = 40 hour/week Hourly Rate. See http://www.calculators.org/savings/wage-conversion.php.</description>
    <label>Hourly Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>