force-app/main/default/objects/Budget_Item__c/fields/Indirect_Costs_Budget__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Costs_Budget__c</fullName>
    <formula
  >IF(Apply_Indirect_Rate_Cap__c, Amount_Allocated_for_Indirect_Cost__c * Indirect_Rate__c, 
IF(New_Item_Budget__c &gt; 0, New_Item_Budget__c * Indirect_Rate__c, 
Item_Budget__c * Indirect_Rate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirect Costs Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>