force-app/main/default/objects/Budget_Item__c/fields/Item_Balance__c.field-meta.xml
<CustomField>
    <fullName>Item_Balance__c</fullName>
    <formula>Total_Item_Budget__c - Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Item Budget - Approved Amount 
(IF(Total_Approved_Amount__c == 0, Total_Approved_Salary__c + Total_Approved_Benefits__c, Total_Approved_Amount__c))</inlineHelpText>
    <label>Item Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>