force-app/main/default/objects/Budget_Item__c/fields/Item_Budget__c.field-meta.xml
<CustomField>
    <fullName>Item_Budget__c</fullName>
    <inlineHelpText
  >BBBSA Personnel: Rate (hourly) * Projected Grant Hours * Number of Weeks (fringe not included);
All Other Personnel: Wages + Fringe Benefits
Expenses: Rate * Quantity</inlineHelpText>
    <label>Item Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>