force-app/main/default/objects/Budget_Item__c/fields/Item_Note__c.field-meta.xml
<CustomField>
    <fullName>Item_Note__c</fullName>
    <label>Item Note</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>