force-app/main/default/objects/Budget_Item__c/fields/Labor_Balance__c.field-meta.xml
<CustomField>
    <fullName>Labor_Balance__c</fullName>
    <formula>IF(Wages__c &gt; 0,
Wages__c - Total_Approved_Salary__c,
Item_Budget__c - Fringe_Benefits__c - Total_Approved_Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>if Wages &gt; 0: Wages - Total Approved Salary;
else: Item Budget - Fringe Benefits - Total Approved Salary</inlineHelpText>
    <label>Labor Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>