force-app/main/default/objects/Budget_Item__c/fields/Life__c.field-meta.xml
<CustomField>
    <fullName>Life__c</fullName>
    <label>Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>