force-app/main/default/objects/Budget_Item__c/fields/Life_Premium__c.field-meta.xml
<CustomField>
    <fullName>Life_Premium__c</fullName>
    <label>Life Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>