force-app/main/default/objects/Budget_Item__c/fields/New_Item_Budget__c.field-meta.xml
<CustomField>
    <fullName>New_Item_Budget__c</fullName>
    <inlineHelpText
  >BBBSA Personnel: New Rate (hourly) * Projected Grant Hours * Number of Weeks;
All Other Personnel: New Wages + New Fringe Benefits
Expenses: New Rate * Quantity</inlineHelpText>
    <label>New Item Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>