force-app/main/default/objects/Budget_Item__c/fields/New_Wages__c.field-meta.xml
<CustomField>
    <fullName>New_Wages__c</fullName>
    <label>New Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>