force-app/main/default/objects/Budget_Item__c/fields/Number_of_Weeks_on_Grant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks_on_Grant__c</fullName>
    <label>Number of Weeks on Grant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>