force-app/main/default/objects/Budget_Item__c/fields/Number_of_Weeks_on_Grant_Long__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Weeks_on_Grant_Long__c</fullName>
    <label>Number of Weeks on Grant - Long</label>
    <precision>16</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>