force-app/main/default/objects/Budget_Item__c/fields/Original_Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Budget Item</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Budget Items</relationshipLabel>
    <relationshipName>Budget_Items</relationshipName>
    <type>Lookup</type>
</CustomField>