force-app/main/default/objects/Budget_Item__c/fields/Other_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Other_Benefits__c</fullName>
    <label>Other Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>