force-app/main/default/objects/Budget_Item__c/fields/Other_Factor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Other_Factor_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Other Factor Percent</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>