force-app/main/default/objects/Budget_Item__c/fields/Other_Premium__c.field-meta.xml
<CustomField>
    <fullName>Other_Premium__c</fullName>
    <label>Other Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>