force-app/main/default/objects/Budget_Item__c/fields/Personnel_Balance__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Balance__c</fullName>
    <formula>Labor_Balance__c + Fringe_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Labor_Balance__c + Fringe_Balance__c</inlineHelpText>
    <label>Personnel Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>