force-app/main/default/objects/Budget_Item__c/fields/Previous_Fringe_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fringe_Benefits__c</fullName>
    <label>Previous Fringe Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>