force-app/main/default/objects/Budget_Item__c/fields/Previous_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Hourly_Rate__c</fullName>
    <label>Previous Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>