force-app/main/default/objects/Budget_Item__c/fields/Previous_Percent_Time_on_Grant__c.field-meta.xml
<CustomField>
    <fullName>Previous_Percent_Time_on_Grant__c</fullName>
    <label>Previous Percent Time on Grant</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>