force-app/main/default/objects/Budget_Item__c/fields/Projected_Grant_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Projected_Grant_Hours_Per_Week__c</fullName>
    <label>Projected Grant Hours Per Week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>