force-app/main/default/objects/Budget_Item__c/fields/Projected_Percent_Time_on_Grant__c.field-meta.xml
<CustomField>
    <fullName>Projected_Percent_Time_on_Grant__c</fullName>
    <label>Projected Percent Time on Grant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>