force-app/main/default/objects/Budget_Item__c/fields/Requested_Indirect_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Indirect_Rate_Amount__c</fullName>
    <label>Requested Indirect Rate Amount</label>
    <summarizedField
  >Reimbursement_Item__c.Indirect_Rate_Amount__c</summarizedField>
    <summaryFilterItems>
        <field
    >Reimbursement_Item__c.Reimbursement_Status_for_Formula_Fields__c</field>
        <operation>notEqual</operation>
        <value>Incomplete</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field
    >Reimbursement_Item__c.Reimbursement_Status_for_Formula_Fields__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Item__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>