force-app/main/default/objects/Budget_Item__c/fields/Retirement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Percent__c</fullName>
    <label>Retirement Percent</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>