force-app/main/default/objects/Budget_Item__c/fields/Short_Term_Premium__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Premium__c</fullName>
    <label>Short Term Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>