force-app/main/default/objects/Budget_Item__c/fields/SUTA_Percent__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Percent__c</fullName>
    <label>SUTA Percent</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>