force-app/main/default/objects/Budget_Item__c/fields/Total_Approved_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Benefits__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Items: Approved Benefits where Reimbursement Status = Approved or Paid</inlineHelpText>
    <label>Total Approved Benefits</label>
    <summarizedField
  >Reimbursement_Item__c.Approved_Benefits__c</summarizedField>
    <summaryFilterItems>
        <field
    >Reimbursement_Item__c.Reimbursement_Status_for_Formula_Fields__c</field>
        <operation>equals</operation>
        <value>Approved, Paid, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Item__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>