force-app/main/default/objects/Budget_Item__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <inlineHelpText>Used by BBBSA and NPAL only</inlineHelpText>
    <label>Total Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>