force-app/main/default/objects/Budget_Item__c/fields/Total_Item_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Budget__c</fullName>
    <formula>Item_Budget__c + Fringe_Benefits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Item Budget + Fringe Benefits</inlineHelpText>
    <label>Total Item Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>