force-app/main/default/objects/Budget_Item__c/fields/Total_Requested_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested_Salary__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Items: Requested Salary where Reimbursement Status != Incomplete or Denied</inlineHelpText>
    <label>Total Requested Salary</label>
    <summarizedField>Reimbursement_Item__c.Requested_Salary__c</summarizedField>
    <summaryFilterItems>
        <field
    >Reimbursement_Item__c.Reimbursement_Status_for_Formula_Fields__c</field>
        <operation>notEqual</operation>
        <value>Incomplete, Denied</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Item__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>