force-app/main/default/objects/Budget_Item__c/fields/Wages__c.field-meta.xml
<CustomField>
    <fullName>Wages__c</fullName>
    <label>Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>