force-app/main/default/objects/Budget_Item__c/validationRules/Amount_Allocated_Indirect_Rate_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Allocated_Indirect_Rate_Cap</fullName>
    <active>false</active>
    <errorConditionFormula
  >Amount_Allocated_for_Indirect_Cost__c &lt;  Grant__r.Indirect_Rate_Cap__c</errorConditionFormula>
    <errorDisplayField>Amount_Allocated_for_Indirect_Cost__c</errorDisplayField>
    <errorMessage
  >Amount allocated for indirect cost must be less than the indirect rate cap.</errorMessage>
</ValidationRule>